--- a/DataLayer/DataLayer.csproj
+++ b/DataLayer/DataLayer.csproj
@@ -59,8 +59,11 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\BaseModels\BaseModel.cs" />
     <Compile Include="Models\BaseModels\PersonBaseModel.cs" />
+    <Compile Include="Models\BindingModels\LoginBindingModel.cs" />
+    <Compile Include="Models\BindingModels\RegisterBindingModel.cs" />
     <Compile Include="Models\Employee.cs" />
     <Compile Include="Models\Employer.cs" />
+    <Compile Include="Models\Enums\Enums.cs" />
     <Compile Include="Models\Position.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
