--- a/DataLayer/DataLayer.csproj
+++ b/DataLayer/DataLayer.csproj
@@ -56,16 +56,30 @@
     <Compile Include="Migrations\202501211118488_Init.Designer.cs">
       <DependentUpon>202501211118488_Init.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202501220929055_rename-RewardAmountPerUnit-to-RewardRate.cs" />
+    <Compile Include="Migrations\202501220929055_rename-RewardAmountPerUnit-to-RewardRate.Designer.cs">
+      <DependentUpon>202501220929055_rename-RewardAmountPerUnit-to-RewardRate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202501221042554_remove-employee.cs" />
+    <Compile Include="Migrations\202501221042554_remove-employee.Designer.cs">
+      <DependentUpon>202501221042554_remove-employee.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202501221057438_add-attributes.cs" />
+    <Compile Include="Migrations\202501221057438_add-attributes.Designer.cs">
+      <DependentUpon>202501221057438_add-attributes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202501221213280_inherit-base-model.cs" />
+    <Compile Include="Migrations\202501221213280_inherit-base-model.Designer.cs">
+      <DependentUpon>202501221213280_inherit-base-model.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\BaseModels\BaseModel.cs" />
     <Compile Include="Models\BaseModels\PersonBaseModel.cs" />
-    <Compile Include="Models\BindingModels\LoginBindingModel.cs" />
-    <Compile Include="Models\BindingModels\RegisterBindingModel.cs" />
     <Compile Include="Models\Employee.cs" />
-    <Compile Include="Models\Employer.cs" />
-    <Compile Include="Models\Enums\Enums.cs" />
     <Compile Include="Models\Position.cs" />
-    <Compile Include="Models\User.cs" />
+    <Compile Include="Models\Manager.cs" />
+    <Compile Include="Models\ViewModels\LoginViewModel.cs" />
+    <Compile Include="Models\ViewModels\RegisterViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -75,6 +89,18 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202501211118488_Init.resx">
       <DependentUpon>202501211118488_Init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501220929055_rename-RewardAmountPerUnit-to-RewardRate.resx">
+      <DependentUpon>202501220929055_rename-RewardAmountPerUnit-to-RewardRate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501221042554_remove-employee.resx">
+      <DependentUpon>202501221042554_remove-employee.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501221057438_add-attributes.resx">
+      <DependentUpon>202501221057438_add-attributes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501221213280_inherit-base-model.resx">
+      <DependentUpon>202501221213280_inherit-base-model.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
