--- a/EmployeeManager/Web.config
+++ b/EmployeeManager/Web.config
@@ -15,7 +15,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="EmployeeManagerDatabaseContext" connectionString="Data Source=INFDEV9\TS1;Initial Catalog=EmployeeManagerDB;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    <!--<add name="EmployeeManagerDatabaseContext" connectionString="Data Source=INFDEV9\TS1;Initial Catalog=EmployeeManagerDB;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
+    <add name="EmployeeManagerDatabaseContext" connectionString="Data Source=DESKTOP-B15HQO2;Initial Catalog=EmployeeManagerDB;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
