--- a/DataLayer/DataLayer.csproj
+++ b/DataLayer/DataLayer.csproj
@@ -52,21 +52,40 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context\EmployeeManagerDatabaseContext.cs" />
-    <Compile Include="Migrations\202501241925178_init.cs" />
-    <Compile Include="Migrations\202501241925178_init.Designer.cs">
-      <DependentUpon>202501241925178_init.cs</DependentUpon>
+    <Compile Include="Migrations\202501250633472_init.cs" />
+    <Compile Include="Migrations\202501250633472_init.Designer.cs">
+      <DependentUpon>202501250633472_init.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202501241941516_add-reward-count.cs" />
-    <Compile Include="Migrations\202501241941516_add-reward-count.Designer.cs">
-      <DependentUpon>202501241941516_add-reward-count.cs</DependentUpon>
+    <Compile Include="Migrations\202501250634491_add-reward-history.cs" />
+    <Compile Include="Migrations\202501250634491_add-reward-history.Designer.cs">
+      <DependentUpon>202501250634491_add-reward-history.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202501250812088_remove-reward-count.cs" />
+    <Compile Include="Migrations\202501250812088_remove-reward-count.Designer.cs">
+      <DependentUpon>202501250812088_remove-reward-count.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202501250952422_update.cs" />
+    <Compile Include="Migrations\202501250952422_update.Designer.cs">
+      <DependentUpon>202501250952422_update.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202501250953174_update-user-fields.cs" />
+    <Compile Include="Migrations\202501250953174_update-user-fields.Designer.cs">
+      <DependentUpon>202501250953174_update-user-fields.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202501251101489_update-position.cs" />
+    <Compile Include="Migrations\202501251101489_update-position.Designer.cs">
+      <DependentUpon>202501251101489_update-position.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\BaseModels\BaseModel.cs" />
     <Compile Include="Models\Employee.cs" />
     <Compile Include="Models\Position.cs" />
+    <Compile Include="Models\RewardHistory.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\ViewModels\CreateManagerViewModel.cs" />
+    <Compile Include="Models\ViewModels\EmployeeHomeViewModel.cs" />
     <Compile Include="Models\ViewModels\LoginViewModel.cs" />
+    <Compile Include="Models\ViewModels\ManagerHomeViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -74,11 +93,23 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202501241925178_init.resx">
-      <DependentUpon>202501241925178_init.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202501250633472_init.resx">
+      <DependentUpon>202501250633472_init.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202501241941516_add-reward-count.resx">
-      <DependentUpon>202501241941516_add-reward-count.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202501250634491_add-reward-history.resx">
+      <DependentUpon>202501250634491_add-reward-history.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501250812088_remove-reward-count.resx">
+      <DependentUpon>202501250812088_remove-reward-count.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501250952422_update.resx">
+      <DependentUpon>202501250952422_update.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501250953174_update-user-fields.resx">
+      <DependentUpon>202501250953174_update-user-fields.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501251101489_update-position.resx">
+      <DependentUpon>202501251101489_update-position.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
