--- a/EmployeeManager/Web.config
+++ b/EmployeeManager/Web.config
@@ -13,12 +13,16 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="owin:AutomaticAppStartup" value="false"/>
   </appSettings>
   <connectionStrings>
-    <!--<add name="EmployeeManagerDatabaseContext" connectionString="Data Source=INFDEV9\TS1;Initial Catalog=EmployeeManagerDB;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
-    <add name="EmployeeManagerDatabaseContext" connectionString="Data Source=DESKTOP-B15HQO2;Initial Catalog=EmployeeManagerDB;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    <add name="EmployeeManagerDatabaseContext" connectionString="Data Source=INFDEV9\TS1;Initial Catalog=EmployeeManagerDB;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    <!--<add name="EmployeeManagerDatabaseContext" connectionString="Data Source=DESKTOP-B15HQO2;Initial Catalog=EmployeeManagerDB;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <system.web>
+    <authentication mode="Forms">
+      <forms name="MyProjectCMS" defaultUrl="/" loginUrl="/auth/login" timeout="43200"/>
+    </authentication>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
