--- a/DataLayer/DataLayer.csproj
+++ b/DataLayer/DataLayer.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Models\Position.cs" />
     <Compile Include="Models\RewardHistory.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\ViewModels\CreateEmployeeViewModel.cs" />
     <Compile Include="Models\ViewModels\CreateManagerViewModel.cs" />
     <Compile Include="Models\ViewModels\EmployeeHomeViewModel.cs" />
     <Compile Include="Models\ViewModels\LoginViewModel.cs" />
