--- a/DataLayer/DataLayer.csproj
+++ b/DataLayer/DataLayer.csproj
@@ -76,6 +76,10 @@
     <Compile Include="Migrations\202501251101489_update-position.Designer.cs">
       <DependentUpon>202501251101489_update-position.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202501260640218_add-text-to-reward.cs" />
+    <Compile Include="Migrations\202501260640218_add-text-to-reward.Designer.cs">
+      <DependentUpon>202501260640218_add-text-to-reward.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\BaseModels\BaseModel.cs" />
     <Compile Include="Models\Employee.cs" />
@@ -84,6 +88,8 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\ViewModels\CreateEmployeeViewModel.cs" />
     <Compile Include="Models\ViewModels\CreateManagerViewModel.cs" />
+    <Compile Include="Models\ViewModels\AddRewardViewModel.cs" />
+    <Compile Include="Models\ViewModels\EditEmployeeViewModel.cs" />
     <Compile Include="Models\ViewModels\EmployeeHomeViewModel.cs" />
     <Compile Include="Models\ViewModels\LoginViewModel.cs" />
     <Compile Include="Models\ViewModels\ManagerHomeViewModel.cs" />
@@ -111,6 +117,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202501251101489_update-position.resx">
       <DependentUpon>202501251101489_update-position.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501260640218_add-text-to-reward.resx">
+      <DependentUpon>202501260640218_add-text-to-reward.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
