--- a/DataLayer/DataLayer.csproj
+++ b/DataLayer/DataLayer.csproj
@@ -86,9 +86,11 @@
     <Compile Include="Models\Position.cs" />
     <Compile Include="Models\RewardHistory.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\ViewModels\PositionsViewModel.cs" />
     <Compile Include="Models\ViewModels\CreateEmployeeViewModel.cs" />
     <Compile Include="Models\ViewModels\CreateManagerViewModel.cs" />
     <Compile Include="Models\ViewModels\AddRewardViewModel.cs" />
+    <Compile Include="Models\ViewModels\CreatePositionViewModel.cs" />
     <Compile Include="Models\ViewModels\EditEmployeeViewModel.cs" />
     <Compile Include="Models\ViewModels\EmployeeHomeViewModel.cs" />
     <Compile Include="Models\ViewModels\LoginViewModel.cs" />
@@ -102,6 +104,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202501250633472_init.resx">
       <DependentUpon>202501250633472_init.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202501250634491_add-reward-history.resx">
       <DependentUpon>202501250634491_add-reward-history.cs</DependentUpon>
