--- a/EmployeeManager/Web.config
+++ b/EmployeeManager/Web.config
@@ -16,8 +16,12 @@
     <add key="owin:AutomaticAppStartup" value="false"/>
   </appSettings>
   <connectionStrings>
-    <add name="EmployeeManagerDatabaseContext" connectionString="Data Source=INFDEV9\TS1;Initial Catalog=EmployeeManagerDB;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
-    <!--<add name="EmployeeManagerDatabaseContext" connectionString="Data Source=DESKTOP-B15HQO2;Initial Catalog=EmployeeManagerDB;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />-->
+	<!----><!----><!----><!----><!----><!---->
+	<!----><!----><!----><!----><!----><!---->
+	<!-- add your connection string here -->
+    <add name="EmployeeManagerDatabaseContext" connectionString=";Initial Catalog=EmployeeManagerDB;Integrated Security=True;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+	<!----><!----><!----><!----><!----><!---->
+	<!----><!----><!----><!----><!----><!---->
   </connectionStrings>
   <system.web>
     <authentication mode="Forms">
