--- a/DataLayer/DataLayer.csproj
+++ b/DataLayer/DataLayer.csproj
@@ -80,21 +80,29 @@
     <Compile Include="Migrations\202501260640218_add-text-to-reward.Designer.cs">
       <DependentUpon>202501260640218_add-text-to-reward.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202501290451309_basemodal-modified.cs" />
+    <Compile Include="Migrations\202501290451309_basemodal-modified.Designer.cs">
+      <DependentUpon>202501290451309_basemodal-modified.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202501290455032_default-value-for-isdeleted.cs" />
+    <Compile Include="Migrations\202501290455032_default-value-for-isdeleted.Designer.cs">
+      <DependentUpon>202501290455032_default-value-for-isdeleted.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\BaseModels\BaseModel.cs" />
+    <Compile Include="Models\Common\BaseModel.cs" />
     <Compile Include="Models\Employee.cs" />
     <Compile Include="Models\Position.cs" />
     <Compile Include="Models\RewardHistory.cs" />
     <Compile Include="Models\User.cs" />
-    <Compile Include="Models\ViewModels\PositionsViewModel.cs" />
-    <Compile Include="Models\ViewModels\CreateEmployeeViewModel.cs" />
-    <Compile Include="Models\ViewModels\CreateManagerViewModel.cs" />
-    <Compile Include="Models\ViewModels\AddRewardViewModel.cs" />
-    <Compile Include="Models\ViewModels\CreatePositionViewModel.cs" />
-    <Compile Include="Models\ViewModels\EditEmployeeViewModel.cs" />
-    <Compile Include="Models\ViewModels\EmployeeHomeViewModel.cs" />
-    <Compile Include="Models\ViewModels\LoginViewModel.cs" />
-    <Compile Include="Models\ViewModels\ManagerHomeViewModel.cs" />
+    <Compile Include="ViewModels\PositionsViewModel.cs" />
+    <Compile Include="ViewModels\CreateEmployeeViewModel.cs" />
+    <Compile Include="ViewModels\CreateManagerViewModel.cs" />
+    <Compile Include="ViewModels\AddRewardViewModel.cs" />
+    <Compile Include="ViewModels\CreatePositionViewModel.cs" />
+    <Compile Include="ViewModels\EditEmployeeViewModel.cs" />
+    <Compile Include="ViewModels\EmployeeHomeViewModel.cs" />
+    <Compile Include="ViewModels\LoginViewModel.cs" />
+    <Compile Include="ViewModels\ManagerHomeViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -123,6 +131,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202501260640218_add-text-to-reward.resx">
       <DependentUpon>202501260640218_add-text-to-reward.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501290451309_basemodal-modified.resx">
+      <DependentUpon>202501290451309_basemodal-modified.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501290455032_default-value-for-isdeleted.resx">
+      <DependentUpon>202501290455032_default-value-for-isdeleted.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
